--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header">
-    <img src="/img/index.svg" class="Group-4" />
+    <img src="/lab-brrgrr-Dhruvil/img/Burger/" class="Group-4" />
     <img src="/img/group-5.svg" class="Group-5" />
   </header>
   <section class="Rectangle1">
@@ -30,8 +30,8 @@
     </div>
     <div class="burger">
       <img src="/img/Burger/Top@2x.png" alt="" />
-      <img id="patty" src="/img/Burger/Patty.svg" alt="" />
-      <img id="cheese" src="/img/Burger/Cheese@2x.png" alt="" />
+      <img id="patty" src="https://github.com/dhruvil-sheth30/lab-brrgrr-Dhruvil/blob/main/img/Burger/Patty@2x.png?raw=true" alt="" />
+      <img id="cheese" src="https://github.com/dhruvil-sheth30/lab-brrgrr-Dhruvil/blob/main/img/Burger/Cheese@2x.png?raw=true" alt="" />
       <img id="tomato" src="/img/Burger/Tomato@2x.png" alt="" />
       <img id="onion" src="/img/Burger/Onion@2x.png" alt="" />
       <img id="lettuce" src="/img/Burger/Lettuce@2x.png" alt="" />
@@ -62,7 +62,7 @@
       </div>
     </div>
   </footer>
-  <div class="footers">Made with ♥️ by Kalvian</div>
+  <div class="footers">Made with ♥️ by Dhruvil</div>
   <script src="app.js"></script>
 </body>
 
